/*
 * Licensed to the Apache Software Foundation (ASF) under one or more
 * contributor license agreements.  See the NOTICE file distributed with
 * this work for additional information regarding copyright ownership.
 * The ASF licenses this file to You under the Apache License, Version 2.0
 * (the "License"); you may not use this file except in compliance with
 * the License.  You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

syntax = "proto3";

option java_multiple_files = true;
package org.apache.airavata.mft.resource.service.local;

import "local/LocalStorage.proto";

service LocalStorageService {

    // Storage
    rpc listLocalStorage (org.apache.airavata.mft.resource.stubs.local.storage.LocalStorageListRequest) returns
    (org.apache.airavata.mft.resource.stubs.local.storage.LocalStorageListResponse);
    
    rpc getLocalStorage (org.apache.airavata.mft.resource.stubs.local.storage.LocalStorageGetRequest) returns
    (org.apache.airavata.mft.resource.stubs.local.storage.LocalStorage);

    rpc createLocalStorage (org.apache.airavata.mft.resource.stubs.local.storage.LocalStorageCreateRequest) returns
    (org.apache.airavata.mft.resource.stubs.local.storage.LocalStorage);

    rpc updateLocalStorage (org.apache.airavata.mft.resource.stubs.local.storage.LocalStorageUpdateRequest) returns
    (org.apache.airavata.mft.resource.stubs.local.storage.LocalStorageUpdateResponse);

    rpc deleteLocalStorage (org.apache.airavata.mft.resource.stubs.local.storage.LocalStorageDeleteRequest) returns
    (org.apache.airavata.mft.resource.stubs.local.storage.LocalStorageDeleteResponse);
}